[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemy/Limbo Boss/hurtLimboSpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Limbo Boss/IdleLimbo.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Limbo Boss/LimboWalkSS.png" type="Texture" id=3]
[ext_resource path="res://Enemy/Limbo Boss/StandardLimbo.png" type="Texture" id=4]
[ext_resource path="res://Enemy/Limbo Boss/TauntLimbo.png" type="Texture" id=5]
[ext_resource path="res://Enemy/Limbo Boss/LimboBossDyingSprite.png" type="Texture" id=6]
[ext_resource path="res://Enemy/Limbo Boss/LimboBoss.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 25.8185
height = 87.5644

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 33, 35, 61, 165 ), Rect2( 177, 42, 61, 158 ), Rect2( 341, 57, 65, 139 ), Rect2( 465, 89, 111, 110 ), Rect2( 617, 137, 171, 63 ), Rect2( 862, 153, 186, 47 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -80 ), Vector2( 0, -76 ), Vector2( 0, -70 ), Vector2( 0, -54 ), Vector2( 0, -32 ), Vector2( 0, -25 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 97, 40, 99, 154 ), Rect2( 334, 44, 77, 150 ), Rect2( 97, 40, 99, 154 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -78 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 42, 17, 72, 156 ), Rect2( 189, 17, 72, 156 ), Rect2( 328, 17, 72, 156 ), Rect2( 189, 17, 72, 156 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -78 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Punch"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 67, 42, 80, 158 ), Rect2( 232, 42, 77, 156 ), Rect2( 424, 45, 76, 153 ), Rect2( 232, 42, 77, 156 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -78 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/HurtAreaLimboPunch/PunchShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Taunt"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8, 1, 1.1, 1.3, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 107, 96, 91, 158 ), Rect2( 375, 93, 56, 157 ), Rect2( 582, 94, 63, 160 ), Rect2( 758, 94, 79, 156 ), Rect2( 758, 94, 79, 156 ), Rect2( 946, 80, 79, 170 ), Rect2( 1122, 56, 79, 194 ), Rect2( 946, 80, 79, 170 ), Rect2( 1122, 56, 79, 194 ), Rect2( 946, 80, 79, 170 ), Rect2( 946, 80, 79, 170 ), Rect2( 1285, 55, 79, 195 ), Rect2( 1437, 44, 79, 209 ), Rect2( 1589, 44, 79, 206 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8, 1, 1.1, 1.3, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -79 ), Vector2( 0, -79 ), Vector2( 0, -79 ), Vector2( 0, -79 ), Vector2( 0, -79 ), Vector2( 0, -85 ), Vector2( 0, -97 ), Vector2( 0, -85 ), Vector2( 0, -97 ), Vector2( 0, -85 ), Vector2( 0, -85 ), Vector2( 0, -97 ), Vector2( 0, -105 ), Vector2( 0, -103 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Walk"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 1, 25, 73, 153 ), Rect2( 108, 25, 72, 154 ), Rect2( 233, 23, 79, 155 ), Rect2( 346, 26, 99, 153 ), Rect2( 465, 26, 107, 150 ), Rect2( 606, 26, 91, 152 ), Rect2( 729, 21, 70, 157 ), Rect2( 831, 21, 61, 153 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -78 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 22.333, 10 )

[node name="LimboBoss" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="LimboHitbox" type="Area2D" parent="."]
position = Vector2( 0.840881, -74.1471 )
collision_layer = 2
collision_mask = 2

[node name="Hitbox" type="CollisionShape2D" parent="LimboHitbox"]
shape = SubResource( 1 )

[node name="Collision2D" type="CollisionShape2D" parent="LimboHitbox"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 2 )
anims/Hurt = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Punch = SubResource( 5 )
anims/Taunt = SubResource( 6 )
anims/Walk = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -79 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 107, 96, 91, 158 )

[node name="HurtAreaLimboPunch" type="Area2D" parent="Sprite"]

[node name="PunchShape" type="CollisionShape2D" parent="Sprite/HurtAreaLimboPunch"]
position = Vector2( 19.5998, -17.3725 )
shape = SubResource( 8 )
disabled = true

[node name="attackCooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="enemy" type="Node" parent="."]
[connection signal="area_entered" from="LimboHitbox" to="." method="_on_LimboHitbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Sprite/HurtAreaLimboPunch" to="." method="_on_HurtAreaLimboPunch_area_entered"]
[connection signal="timeout" from="attackCooldown" to="." method="_on_attackCooldown_timeout"]
